src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_containers_tests__a_variable_declaration_block_needs_to_end_with_endvar.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token `END_VAR`
  ┌─ <internal>:1:17
  │
1 │ PROGRAM buz VAR END_PROGRAM 
  │                 ^^^^^^^^^^^ Missing expected Token `END_VAR`
